# simple-encrypt-decrypt-app

./: .gitignore  .gitlab-ci.yml  README.md  input_script.exp
src/: CMakeLists.txt
src/appAES/: CMakeLists.txt  app_aes.c
src/libAES/: CMakeLists.txt
src/libAES/example/: CMakeLists.txt  aes_example.c
src/libAES/src/: CMakeLists.txt  aes.c  aes.h  pkcs7_padding.c  pkcs7_padding.h  utils.c  utils.h
src/libAES/test/: CMakeLists.txt  aes_test.c
src/libLog/: CMakeLists.txt
src/libLog/example/: CMakeLists.txt  log_example.c
src/libLog/src/: CMakeLists.txt  logLib.c  logLib.h
src/libLog/test/: CMakeLists.txt  log_test.c
